# opengl-rubiks-cube

./: .gitignore  CMakeLists.txt  README.md
include/: Callback.h  Controller.h  GlobalVar.h  Painter.h  RubiksCube.h  Shader.h  Texture.h  Window.h
shader/: FragmentShader.glsl  VertexShader.glsl
src/: Callback.cpp  Painter.cpp  RubiksCube.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
